# fluxmax

./: .gitignore  README.md  fluxmax.yml  pyproject.toml
examples/single_frequency_optimization/: optimize_circular_exclusion_chunked.ipynb  topology_optimization_heat_transfer.ipynb
src/fluxmax/: __init__.py
src/fluxmax/materials/: __init__.py  materials.py  meep_materials.py  resonances.py
src/fluxmax/materials/data/: gold.txt
src/fluxmax/optimization/: design_tools.py
src/fluxmax/parallelism/: __init__.py  execution.py
src/fluxmax/physics/: heat_transfer.py  kernels.py  lifshitz.py
src/fluxmax/setup/: two_body.py
src/fluxmax/units/: si_units.py
src/fluxmax/utils/: plot_utils.py
tests/: test_lifshitz.py  test_materials.py  test_parallel.py  test_validate_planar.py
